--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ prettytable-rs = "0.8.0"
 lazy_static = "1.3.0"
 uuid = { version = "0.7.4", features = ["serde", "v4"] }
 human-panic = "1.0.1"
+syntect = "3.2"
