--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ lazy_static = "1.3.0"
 uuid = { version = "0.7.4", features = ["serde", "v4"] }
 human-panic = "1.0.1"
 syntect = "3.2"
+chrono = { version = "0.4", features = ["serde"] }
