--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ uuid = { version = "0.7.4", features = ["serde", "v4"] }
 human-panic = "1.0.1"
 syntect = "3.2"
 chrono = { version = "0.4", features = ["serde"] }
+atty = "0.2.11"
